Eliminate quotes for font family

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: "Merriweatherf";
+  font-family: Merriweatherf;
   font-weight: normal;
   line-height: 1.5;
 }
