--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: "Merriweather", serif;
   font-weight: lighter;
   line-height: 1.5;
 }
@@ -26,7 +27,6 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-area: main;
-  grid-template-rows: align-self;
   gap: .75rem;
 }
 
