--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,14 @@ img {
 }
 
 .banner {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 4rem;
+}
+
+.banner img {
   grid-column: 1 / -1;
+  grid-row: 1 / -1;
 }
 
 body {
