--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,13 @@ article p {
   color: #fff;
 }
 
+article figure img {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-area: main;
+  gap: .75rem;
+}
+
 dl dt {
   font-style: italic;
 }
