--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,10 @@ h1 {
 h2 {
   font-size: 1.5rem;
   font-style: italic;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-area: main;
+  gap: .75rem;
 }
 
 figcaption {
