--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ img {
 .banner {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1rem;
+  grid-template-rows: 1fr 4rem;
 }
 
 body {
@@ -51,12 +51,16 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-area: main;
+}
+
+main img {
   gap: .75rem;
 }
 
 dl {
   display: grid;
   grid-column: 1;
+  grid-row: 3;
   grid-template-columns: repeat(3, 1fr);
 }
 
