Fixed some errors

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ img {
 .banner {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1rem;
+  grid-template-rows: align-self;
 }
 
 body {
@@ -33,10 +33,6 @@ h1 {
 h2 {
   font-size: 1.5rem;
   font-style: italic;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr;
-  gap: .75rem;
 }
 
 figcaption {
@@ -52,13 +48,10 @@ article p {
 }
 
 main {
-  grid-area: main;
-}
-
-main article img {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
+  grid-area: main;
   gap: .75rem;
 }
 
