--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,16 @@ img {
 .banner {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 2rem;
+  grid-template-rows: 2rem;
 }
 
 body {
-  grid-template-areas: "main";
+  display: grid;
+  grid-template-areas: "header header header" "sidebar main";
+}
+
+header {
+  grid-area: header;
 }
 
 h1 {
@@ -52,7 +57,7 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
-  grid-area: main;
+  grid-area: sidebar main;
   gap: .75rem;
   align-self: center;
 }
@@ -63,6 +68,7 @@ dl {
   grid-row: 3;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
+  align-self: center;
 }
 
 dl dt {
