--- a/css/main.css
+++ b/css/main.css
@@ -28,11 +28,10 @@ header article figure img {
 body {
   display: grid;
   grid-template-columns: auto;
-  grid-template-areas: "header" "main";
+  grid-template-areas: "main";
 }
 
 header {
-  grid-area: header;
   align-self: stretch;
 }
 
